Write HTML for rock paper scissors game

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Can you beat the computer?</h1>
+    <h2>Make a selection:</h2>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <h2>Results:</h2>
+    <div id="placeForResults"></div>
+    <h2>Winner:</h2>
+    <p id="placeForWinner"></p>
     
 <script src="main.js"></script>
 </body>
