Add running scores to the DOM

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <h2>Score:</h2>
+        <p>Human:</p>
+            <p id="placeForHumanScore">0</p>
+        <p>Computer:</p>
+            <p id="placeForComputerScore">0</p>
     <h2>Results:</h2>
     <div id="placeForResults"></div>
     <h2>Winner:</h2>
