Refactor code and add comments

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <button id="scissors">Scissors</button>
     <h2>Score:</h2>
         <p>Human:</p>
-            <p id="placeForHumanScore">0</p>
+            <span id="humanScoreSpan">0</span>
         <p>Computer:</p>
-            <p id="placeForComputerScore">0</p>
+            <span id="computerScoreSpan">0</span>
     <h2>Results:</h2>
-    <div id="placeForResults"></div>
+    <div id="resultsDiv"></div>
     <h2>Winner:</h2>
-    <p id="placeForWinner"></p>
+    <span id="winnerSpan"></span>
     
 <script src="main.js"></script>
 </body>
